# bsse-linux-team-tasks

./: .travis.yml  CMakeLists.txt  README.md  client.go  elf_parser.cpp  elf_parser.h  go.mod  main.cpp  main.go  script.sh  server.go  test.py  utils.go
.github/workflows/: ci.yml
cmd/: client.go  server.go
screen/: client.go  server.go  server_test.go  utils.go
src/: antoxa.h  bablib.cpp  bablib.h  fuse.cpp  main.cpp  utils.h
tests/: CMakeLists.txt  cyclic_deps_checker.cpp  no_deps_checker.cpp  test_wrapper.cpp  test_wrapper.h
tests/cyclic_deps/: CMakeLists.txt  Makefile  even.c  even.h  main_even.c  main_odd.c  odd.c  odd.h
tests/no_deps/: CMakeLists.txt
